<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:orientation="vertical"
        android:id="@+id/swipe_up_bar"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:background="@android:color/darker_gray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:text="The Martian"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorPrimary"
            android:visibility="invisible"
            android:tag="@string/book_description_tag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Andy Weir"
            android:id="@+id/authors"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/bookTitle"
            android:visibility="invisible"
            android:tag="@string/book_description_tag"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/status_textview"
            android:text="@string/status_scanning"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:tag="@string/status_tag"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_description_textview"
        android:text="@string/how_to_scan"
        android:layout_below="@id/swipe_up_bar"
        android:tag="@string/status_tag"
        android:layout_margin="16dp"/>

    <ImageView
        android:layout_width="120dp"
        android:scaleType="center"
        android:layout_height="180dp"
        android:id="@+id/bookCover"
        android:contentDescription="@string/book_cover"
        android:layout_below="@+id/swipe_up_bar"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:tag="@string/book_description_tag"
        android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookCover"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:text="Science Fiction"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:textColorSecondary"
                android:tag="@string/book_description_tag"
                android:visibility="invisible"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullBookDesc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary"
                android:text="Full Book Description"
                android:maxLines="6"
                android:tag="@string/book_description_tag"
                android:visibility="invisible"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:visibility="invisible"
            android:tag="@string/book_description_tag"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ok_button"
            android:visibility="invisible"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="bottom"
            android:tag="@string/book_description_tag"
            />
    </LinearLayout>
</RelativeLayout>